--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-plotly==4.1.1
-pandas-datareader==0.8.1
-jupyter==1.0.0
-matplotlib==3.1.1
-scipy==1.3.1
+plotly
+pandas-datareader
+jupyter
+matplotlib
+scipy
+yfinance
